# graasp-pre-processing

./: .gitignore  README.md  pyproject.toml
src/graasp_pre_processing/: __init__.py  descendants.py  main.py  members.py  utils.py
src/graasp_pre_processing/apps/: __init__.py  app_ids.py  apps.py  collaborative_ideation.py  expand_data.py  schemas.py  short_answer.py  utils.py
src/graasp_pre_processing/apps/collaborative_ideation/: __init__.py  analysis.py  collaborative_ideation.py  schemas.py
src/graasp_pre_processing/apps/survey/: __init__.py  survey.py
src/graasp_pre_processing/entities/: Item.py  schemas.py
src/graasp_pre_processing/errors/: FilesErrors.py
tests/: test_apps.py  test_descendants.py  test_item.py  test_main.py  test_members.py
tests/fixtures/: members.json
